# InfoNES-port

./: .gitignore  README.md
src/: CMakeLists.txt  InfoNES_System.c  InfoNES_System.cpp  bmp.cpp  bmp.h  main.c  main.cpp  rom.c  shell_minimal.html
src/InfoNES/: CMakeLists.txt  InfoNES.cpp  InfoNES_Mapper.c  InfoNES_Mapper.h  K6502.h  K6502_rw.h
tools/: file_to_array.py
